test/spec_vectors/simd_bit_shift/fail/module_29.wat
(module (func $i8x16.shl-1st-arg-empty (result v128) (i8x16.shl (i32.const 0))))